# EukCC

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile_dev  README.md  build.sh  create_release.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: python-publish.yml  tests.yml
data/: default.config.yaml
docker/: Dockerfile
docs/: FAQ.rst  Makefile  bin_merging.rst  conf.py  container.rst  index.rst  install.rst  modules.rst  quickstart.rst  tutorial.rst
docs/_build/doctrees/: FAQ.doctree  environment.pickle  index.doctree
docs/_build/doctrees/usage/: tutorial.doctree
docs/_build/html/: FAQ.html  genindex.html  index.html  install.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: FAQ.rst.txt  index.rst.txt  install.rst.txt
docs/_static/: eukcc-help.txt  eukcc.csv
docs/usage/: options.rst  tutorial.rst
eukcc/: __init__.py  __main__.py  base.py  bin.py  eukcc.py  exec.py  fasta.py  file.py  fileoperations.py  find_markerset.py  helper.py  info.py  message.py  refine.py  set_define.py  treehandler.py  treelineage.py  version.py  workflow.py
scripts/: EukCC.py  binlinks.py  eukcc_renamefasta.py  filter_euk_bins.py  runGMES
tests/: test_basic.py  test_eukcc.py  test_fasta.py  test_file.py  test_tree.py
tests/test_files/: example.bed
tests/testfiles/: N50_1.fa  SCMG_TEST.csv  corrupt_file  gmes_fail.fasta  multiline.fasta  not_a_fasta.fasta  test.fa  test_metaeuk_file.fa  test_metaeuk_file_clean.fa  tree_scmg.csv  tree_taxinfo.csv  valid_but_tricky_fasta.fa
(+4 files in other folders)
