[project]
name = "eukcc"
version = "2.1.3"
readme = "README.md"
license = {text = "GPLv3"}
authors = [
    { name = "Paul Saary", email = "eukcc@paulsaary.de" },
    { name = "MGnify team", email = "metagenomics-help@ebi.ac.uk" },
]
keywords = ["bioinformatics", "mags", "eukaryotic", "completeness", "contamination"]
description = "Check eukaryotic genomes or MAGs for completeness and contamination"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3.6",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: Unix",
]

dependencies = [
    "ete3>=3.1.3",
    "numpy>=1.24.4",
    "jsonpickle>=4.0.0",
    "biopython==1.83",
    "pysam==0.21.0",
    "six"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "eukcc",
    "scripts",
]

[project.scripts]
# eukcc
eukcc = "eukcc.__main__:main"
shared_markers = "eukcc.find_markerset:main"
# scripts
binlinks = "scripts.binlinks:main"
filter_euk_bins = "scripts.filter_euk_bins:main"

[project.optional-dependencies]
tests = [
    "pytest==7.4.0",
    "pytest-md==0.2.0",
    "pytest-workflow==2.0.1",
    "ete3>=3.1.3",
    "numpy>=1.24.4",
    "jsonpickle>=4.0.0",
    "biopython==1.83",
    "pysam==0.21.0",
    "six"
]

dev = [
    "pre-commit==3.8.0",
    "black==24.8.0",
    "flake8==7.1.1",
    "pep8-naming==0.14.1"
]
